force-app/main/default/objects/Reservation_MCC__c/Reservation_MCC__c.object-meta.xml
<CustomObject>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: To keep track of the books such as their check in/out time, who borrow its, etc.</description>
    <label>Reservation MCC</label>
    <nameField>
        <displayFormat>R#-{0000}</displayFormat>
        <label>Reservation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservations MCC</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>