force-app/main/default/objects/Reservation_MCC__c/fields/Book_MCC__c.field-meta.xml
<CustomField>
    <fullName>Book_MCC__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: To know which book the customer is reserving</description>
    <label>Book</label>
    <referenceTo>Book_MCC__c</referenceTo>
    <relationshipName>Book_Reservations_MCC</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>