force-app/main/default/objects/Reservation_MCC__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: To know who reserve/return the book.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Book_Reservations_MCC</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>