force-app/main/default/objects/Reservation_MCC__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: To auto-populate the due date and time for the book being reserved/borrowed.</description>
    <formula>DATETIMEVALUE( Reserve_Date_Time__c + 15)</formula>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>