force-app/main/default/objects/Reservation_MCC__c/fields/Reserve_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Date_Time__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: To know what date/time the book is being reserved.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date and time the book is being RESERVED/BORROWED by the customer.</inlineHelpText>
    <label>Reserve Date/Time</label>
    <type>DateTime</type>
</CustomField>