force-app/main/default/objects/Reservation_MCC__c/fields/Return_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Return_Date_Time__c</fullName>
    <description>Created By: MCC
Business Unit: Salesforce Admin Apprenticeship 2021 (Alphaforce Team)
Purpose: To know when is the book being returned.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date and time the book is being RETURNED by the customer.</inlineHelpText>
    <label>Return Date/Time</label>
    <type>DateTime</type>
</CustomField>