force-app/main/default/objects/Reservation_MCC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Book_MCC__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>