force-app/main/default/objects/Reservation_MCC__c/listViews/Returned_Books.listView-meta.xml
<ListView>
    <fullName>Returned_Books</fullName>
    <columns>NAME</columns>
    <columns>Book_MCC__c</columns>
    <columns>Contact__c</columns>
    <columns>Reserve_Date_Time__c</columns>
    <columns>Return_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Return_Date_Time__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Returned Books</label>
</ListView>